--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="btn_login">Login</string>
     <string name="tv_forgot_password">Forgot Password?</string>
     <string name="tv_register">Register</string>
+    <string name="btn_register">Register</string>
 
 </resources>
