--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="hint_fullName">Full name</string>
     <string name="hint_phoneNumber">Phone number</string>
     <string name="btn_signUp">Sign Up</string>
+    <string name="guest_login">Continue as a guest</string>
 
 </resources>
