Create Route class & draw polyline

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="guest_login">Continue as a guest</string>
     <string name="Registartion_success">Registartion success</string>
     <string name="toolbar_logout">Logout</string>
+    <string name="routeAdded">route added successfuly</string>
 
 </resources>
