--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
     <string name="btn_addRoute">Add Route</string>
     <string name="et_filePath">File path</string>
     <string name="btn_chooseFile">Choose route file</string>
+    <string name="btn_chooseImage">Choose Image Route</string>
 
 </resources>
