--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="et_filePath">File path</string>
     <string name="btn_chooseFile">Choose route file</string>
     <string name="btn_chooseImage">Choose Image Route</string>
+    <string name="toolbar_home">map</string>
 
 </resources>
