--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="btn_show_route">Show on map</string>
     <string name="hint_Record">Record route</string>
     <string name="helper_required">*Required</string>
+    <string name="fill_all">Please fill all fields</string>
     <string name="emergency_title">Emergency phones</string>
     <string name="my_location">My Location:</string>
     <string name="emergency_name1">Yedidim</string>
@@ -38,6 +39,8 @@
     <string name="emergency_name2">Toffat teva</string>
     <string name="emergency_details2">Voluntary roads and off roads rescues 24/7</string>
     <string name="emergency_phone2">1700-707-609</string>
-    <string name="fill_all">Please fill all fields</string>
+    <string name="emergency_name3">Evacuation by helicopter</string>
+    <string name="emergency_details3">In medical emergency dial 101</string>
+    <string name="emergency_phone3">03-6062264</string>
 
 </resources>
