--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,5 +42,7 @@
     <string name="emergency_name3">Evacuation by helicopter</string>
     <string name="emergency_details3">In medical emergency dial 101</string>
     <string name="emergency_phone3">03-6062264</string>
+    <string name="hello">Hello</string>
+    <string name="hello_guest">Hello Guest</string>
 
 </resources>
