--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,9 @@
     <string name="hint_password">Password</string>
     <string name="btn_login">Login</string>
     <string name="tv_forgot_password">Forgot Password?</string>
-    <string name="tv_register">Register</string>
-    <string name="btn_register">Register</string>
-    <string name="tv_register_capital">REGISTER</string>
+    <string name="tv_register">Sign Up</string>
+    <string name="btn_register">Sign Up</string>
+    <string name="tv_register_capital">SIGN UP</string>
     <string name="signup_login_hint">Already have an account? Sign In</string>
     <string name="hint_fullName">Full name</string>
     <string name="hint_phoneNumber">Phone number</string>
