--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,5 +50,6 @@
     <string name="service_details">Recording new route in process</string>
     <string name="backgruond_permssion_prompt">In order to record route on background please approve background location permission</string>
     <string name="got_it">Got it!</string>
+    <string name="err_add_route">Erorr! fill all fields</string>
 
 </resources>
